# TLS-Certificate-Phishing-Detector-with-LLM-Integration

./: LICENSE  QUICKSTART.md  README.md  TODO.md  certificate_parser.py  config.py  ensemble.py  io.py  metrics.py  models.py  prompts.md  pyproject.toml  redact.py  requirements.txt  test_parser.py
src/: cli.py  data_loader.py  features.py  rules.py
src/eval/: reports.py
src/llm/: gemini_client.py  prompts.py
tests/: test_data_loader.py  test_llm_client.py
